--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 *,
 *::before,
 *::after {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 h1,
@@ -11,291 +11,278 @@ h4,
 h5,
 h6,
 p {
-    margin-top: 0;
-    margin-bottom: 0;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 ul,
 ol {
-    margin-top: 0;
-    margin-bottom: 0;
-    padding-left: 0;
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-left: 0;
 }
 
 img {
-    display: block;
+  display: block;
 }
 
 body {
-    font-family: Roboto, sans-serif;
-    background-color: #ffffff;
-    color: #434455;
+  font-family: Roboto, sans-serif;
+  background-color: #ffffff;
+  color: #434455;
 }
 
 .container {
-    max-width: 1440px;
-        padding-left: 156px;
-        padding-right: 156px;
-        margin-left: ;
-        margin-right:
+  display: flex;
+  max-width: 1158px;
+  margin: 0 auto;
+  padding: 0 15px 0 15px;
 }
 
 header {
-    background-color: #E7E9FC;
-    line-height: 60px;
-    height: 72px;
-    display: flex;
-        width: 1440px;
-        height: 72px;
-        justify-content: center;
-        align-items: center;
-        flex-shrink: 0;
+  background-color: #e7e9fc;
+  line-height: 60px;
+  display: flex;
+  width: 1440px;
+  height: 72px;
+  justify-content: center;
+  align-items: center;
+  flex-shrink: 0;
+  border-bottom: 1px solid var(--CORNFLOWER, #e7e9fc);
+}
+
+.navigation-container {
+  display: flex;
 }
 
 .header-logo {
-    font-family: Raleway, sans-serif;
-        font-size: 18px;
-        font-weight: 700;
-        line-height: 1.17;
-        letter-spacing: 0.03em;
-        color: #4D5AE5;
-        text-decoration: none;
-        text-transform: uppercase;
-        margin-right: 76px;
-        margin-left: 156px;
+  font-family: Raleway, sans-serif;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  color: #4d5ae5;
+  text-decoration: none;
+  text-transform: uppercase;
+  padding-top: 24px;
+  padding-right: 1169px;
 }
 
 .logo-header-text {
-    font-family: Raleway, sans-serif;
-        font-size: 18px;
-        font-weight: 700;
-        line-height: 21px;
-        letter-spacing: 0.03em;
-        color: #2E2F42;
+  font-family: Raleway, sans-serif;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 21px;
+  letter-spacing: 0.03em;
+  color: #2e2f42;
 }
 
-
-.nav-list{
-    list-style-type: none;
-    display: inline-flex;
-        align-items: flex-start;
-        gap: 40px;
-        width: 261px;
-        height: 24px;
-        margin-right: 832px;
+.nav-list {
+  list-style-type: none;
+  display: inline-flex;
+  align-items: flex-start;
+  gap: 40px;
+  width: 261px;
+  height: 24px;
+  margin-right: 832px;
 }
 
 .nav-links-list-content {
-        text-decoration: none;
-        font-family: Roboto, sans-serif;
-        font-size: 16px;
-        font-weight: 500;
-        line-height: 24px;
-        letter-spacing: 0.02em;
-        color: #2E2F42;
+  text-decoration: none;
+  font-family: Roboto, sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 24px;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
 }
 
 .nav-links-list-content:hover {
-    color: #404bbf;
+  color: #404bbf;
 }
 .nav-links-list-content:focus {
-    color: #404bbf;
+  color: #404bbf;
 }
 
 .nav-links-list-content:active {
-    color: #404bbf;
+  color: #404bbf;
 }
 
 .address-style {
-    font-style: normal;
+  font-style: normal;
 }
 
 .address-links-list {
-    list-style-type: none;
+  list-style-type: none;
 }
 
-.address-links-list-content{
-        font-size: 16px;
-        font-weight: 400;
-        line-height: 24px;
-        letter-spacing: 0.02em;
-        color: #434455;
-        text-decoration: none;
+.address-links-list-content {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0.02em;
+  color: #434455;
+  text-decoration: none;
 }
 
 .address-links-list-content:hover {
-    color: #404bbf;
+  color: #404bbf;
 }
 
 .address-links-list-content:focus {
-    color: #404bbf;
+  color: #404bbf;
 }
 
 .offer {
-    background-color: #2E2F42;
-    width: 1440px;
-        height: 600px;
-        flex-shrink: 0;
+  background-color: #2e2f42;
+  width: 1440px;
+  height: 600px;
+  flex-shrink: 0;
 }
 
 .offer-text {
-        font-family: Roboto, sans-serif;
-        font-size: 56px;
-        font-weight: 700;
-        line-height: 1.07;
-        letter-spacing: 0.02em;
-        text-align: center;
-        color: #FFFFFF;
-        padding-top : 188px;
-        padding-right: 472px;
-        padding-bottom: 292px;
-        padding-left: 472px;
+  font-family: Roboto, sans-serif;
+  font-size: 56px;
+  font-weight: 700;
+  line-height: 1.07;
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: #ffffff;
 }
 
 .order-style {
-    cursor: pointer;
-     background-color: #4D5AE5;
-     color: #FFFFFF;
-        font-size: 16px;
-        font-weight: 500;
-        line-height: 24px;
-        letter-spacing: 0.04em;
-        text-align: center;
-        display: inline-flex;
-            padding: 16px 32px;
-            align-items: flex-start;
-            gap: 10px;
-            border-radius: 4px;
-                background: var(--IRIS, #4D5AE5);
-                box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-                margin-top: 356px;
-                margin-right: 635px;
-                margin-bottom: 188px;
-                margin-left: 636px;
-
+  cursor: pointer;
+  background-color: #4d5ae5;
+  color: #ffffff;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 24px;
+  letter-spacing: 0.04em;
+  text-align: center;
+  display: inline-flex;
+  padding: 16px 32px;
 }
 
 .order-style:hover {
-    background-color: #404BBF;
+  background-color: #404bbf;
 }
 
 .order-style:focus {
-    background-color: #404BBF;
+  background-color: #404bbf;
 }
 
 .advantages-list {
-    list-style-type: none;
+  list-style-type: none;
 }
 
 .advantages-header-text {
-    font-size: 20px;
-    font-weight: 500;
-    line-height: 24px;
-    letter-spacing: 0.02em;
-    text-align: left;
-    color: #2E2F42;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 24px;
+  letter-spacing: 0.02em;
+  text-align: left;
+  color: #2e2f42;
 }
 
 .advantages-text {
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 24px;
-    letter-spacing: 0.02em;
-    text-align: left;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0.02em;
+  text-align: left;
 }
 
 .team-members {
-    background-color: #F4F4FD;
+  background-color: #f4f4fd;
 }
 
 .our-team {
-        font-size: 36px;
-        font-weight: 700;
-        line-height: 1.11;
-        letter-spacing: 0.02em;
-        text-align: center;
-        text-transform: capitalize;
-        color: #2E2F42;
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  text-align: center;
+  text-transform: capitalize;
+  color: #2e2f42;
 }
 
 .members-list {
-    list-style-type: none;
+  list-style-type: none;
 }
 
 .team-card {
-    background-color: #FFFFFF;
+  background-color: #ffffff;
 }
 
 .team-member-name {
-    font-size: 20px;
-    font-weight: 500;
-    line-height: 24px;
-    letter-spacing: 0.02em;
-    text-align: center;
-    color: #2E2F42;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 24px;
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: #2e2f42;
 }
 
 .team-member-position {
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 24px;
-    letter-spacing: 0.02em;
-    text-align: center;
-    color: #434455;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: #434455;
 }
 
 .our-portfolio {
-    font-size: 36px;
-    font-weight: 700;
-    line-height: 1.11;
-    letter-spacing: 0.02em;
-    text-align: center;
-    color: #2E2F42;
-    text-transform: capitalize;
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: #2e2f42;
+  text-transform: capitalize;
 }
 
-
 .product-list {
-    list-style-type: none;
+  list-style-type: none;
 }
 
 .product-name {
-    font-size: 20px;
-        font-weight: 500;
-        line-height: 24px;
-        letter-spacing: 0.02em;
-        text-align: left;
-    color: #2E2F42;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 24px;
+  letter-spacing: 0.02em;
+  text-align: left;
+  color: #2e2f42;
 }
 
 .product-type {
-    font-size: 16px;
-        font-weight: 400;
-        line-height: 24px;
-        letter-spacing: 0.02em;
-        text-align: left;
-    color: #434455;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0.02em;
+  text-align: left;
+  color: #434455;
 }
 
 .foot-style {
-    background-color: #2E2F42;
+  background-color: #2e2f42;
 }
 
 .logo-footer-text {
-    color: #F4F4FD;
+  color: #f4f4fd;
 }
 
-.foot-par-text {   
-        font-size: 16px;
-        font-weight: 400;
-        line-height: 24px;
-        letter-spacing: 0.02em;
-        text-align: left;
-    
-        font-size: 16px;
-        font-weight: 400;
-        line-height: 24px;
-        letter-spacing: 0.02em;
-        text-align: left;
-        color: #F4F4FD;
+.foot-par-text {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0.02em;
+  text-align: left;
+
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0.02em;
+  text-align: left;
+  color: #f4f4fd;
 }
