--- a/css/styles.css
+++ b/css/styles.css
@@ -33,8 +33,7 @@ body {
 }
 
 .container {
-  display: flex;
-  max-width: 1158px;
+  width: 1158px;
   margin: 0 auto;
   padding: 0 15px 0 15px;
 }
@@ -43,9 +42,14 @@ body {
   background-color: #e7e9fc;
   line-height: 60px;
   display: flex;
-  width: 1440px;
-  height: 72px;
   border-bottom: 1px solid var(--CORNFLOWER, #e7e9fc);
+}
+
+.header-box {
+  display: flex;
+  width: 1158px;
+  margin: 0 auto;
+  padding: 0 15px 0 15px;
 }
 
 .navigation-container {
@@ -65,6 +69,7 @@ body {
   text-transform: uppercase;
   margin-top: 24px;
   margin-right: 76px;
+  margin-bottom: 24px;
 }
 
 .logo-header-text {
@@ -81,8 +86,6 @@ body {
   display: inline-flex;
   align-items: flex-start;
   gap: 40px;
-  width: 261px;
-  height: 24px;
 }
 
 .nav-links-list-content {
@@ -94,7 +97,7 @@ body {
   letter-spacing: 0.02em;
   color: #2e2f42;
   padding-top: 24px;
-  padding-bottom: 24px;
+  padding-right: 0px;
 }
 
 .nav-links-list-content:hover {
@@ -116,7 +119,9 @@ body {
   display: flex;
   list-style-type: none;
   gap: 40px;
-  margin-left: 332px;
+  margin-top: 24px;
+  margin-bottom: 24px;
+  margin-left: 150px;
 }
 
 .address-links-list-content {
@@ -138,9 +143,8 @@ body {
 
 .offer {
   background-color: #2e2f42;
-  width: 1440px;
-  height: 600px;
-  flex-shrink: 0;
+  padding-top: 188px;
+  padding-bottom: 188px;
 }
 
 .offer-text {
@@ -151,6 +155,8 @@ body {
   letter-spacing: 0.02em;
   text-align: center;
   color: #ffffff;
+  max-width: 496px;
+  margin-left: 316px;
 }
 
 .order-style {
@@ -162,8 +168,14 @@ body {
   line-height: 24px;
   letter-spacing: 0.04em;
   text-align: center;
-  display: inline-flex;
+  border: none;
+  border-radius: 4px;
+  display: block;
   padding: 16px 32px;
+  min-width: 169px;
+  height: 56px;
+  margin-top: 48px;
+  margin-left: 480px;
 }
 
 .order-style:hover {
@@ -174,8 +186,24 @@ body {
   background-color: #404bbf;
 }
 
+.adv-section,
+.team-members {
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+
+.visually-hidden {
+  visibility: hidden;
+}
+
 .advantages-list {
   list-style-type: none;
+  display: flex;
+  gap: 24px;
+}
+
+.adv-list-item {
+  width: calc(100%-72px / 4);
 }
 
 .advantages-header-text {
@@ -185,6 +213,7 @@ body {
   letter-spacing: 0.02em;
   text-align: left;
   color: #2e2f42;
+  margin-bottom: 8px;
 }
 
 .advantages-text {
@@ -276,12 +305,6 @@ body {
 }
 
 .foot-par-text {
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 24px;
-  letter-spacing: 0.02em;
-  text-align: left;
-
   font-size: 16px;
   font-weight: 400;
   line-height: 24px;
