--- a/css/styles.css
+++ b/css/styles.css
@@ -90,7 +90,7 @@ body {
   letter-spacing: 0.02em;
   color: #2e2f42;
   padding-top: 24px;
-  padding-right: 0px;
+  padding-bottom: 24px;
 }
 
 .nav-links-list-content:hover {
@@ -196,7 +196,7 @@ body {
 }
 
 .adv-list-item {
-  width: calc(100%-72px / 4);
+  width: calc((100%-72px) / 4);
 }
 
 .advantages-header-text {
