--- a/css/styles.css
+++ b/css/styles.css
@@ -338,6 +338,7 @@ body {
   text-decoration: none;
   text-transform: uppercase;
   display: inline-block;
+  margin-bottom: 16px;
 }
 
 .logo-footer-text {
